--- a/src/test/resources/projects/basic/archetype.properties
+++ b/src/test/resources/projects/basic/archetype.properties
@@ -1,5 +1,5 @@
 #Fri Jan 11 21:24:39 CET 2019
-package=it.pkg
-version=0.1-SNAPSHOT
-groupId=archetype.it
-artifactId=basic
+package=com.kodnito
+version=1.0-SNAPSHOT
+groupId=com.kodnito
+artifactId=kodnito-microprofile-archetype
