--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.kodnito</groupId>
   <artifactId>kodnito-microprofile-archetype</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.2</version>
   <packaging>maven-archetype</packaging>
 
   <name>kodnito-microprofile-archetype</name>
